Filter and Search Functionality

--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
                 <p id="numbers">0 / 0</p>
             </div>
         </div>
+
+        <div class="operation">
+            <div class="searchbar">
+                <input type="text" id="searchInput" placeholder="Search tasks...">
+
+            </div>
+            <div class="filter">
+
+                <label for="filterSelect">Filter Task :</label>
+                <select id="filterSelect">
+                    <option value="all">All</option>
+                    <option value="active">Active</option>
+                    <option value="completed">Completed</option>
+                </select>
+            </div>
+        </div>
+
         <form action="">
             <input id="taskInput" type="text" placeholder="Write your task">
             <button id="newTask" type="submit">+</button>
